// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Item renders correctly 1`] = `
<div
  className=
      ms-Card
      {
        border-color: lightgray;
        border-style: solid;
        border-width: 1px;
        box-shadow: 1px 2px lightgray;
        height: 350px;
        padding-bottom: 12px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 12px;
        width: 250px;
      }
>
  <div
    className=
        ms-Stack
        ms-Card-stack
        {
          box-sizing: border-box;
          display: flex;
          flex-direction: column;
          flex-wrap: nowrap;
          height: 100%;
          justify-content: space-between;
          width: auto;
        }
        & > * {
          height: auto;
          text-overflow: ellipsis;
        }
        & > *:not(:first-child) {
          margin-top: 12px;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 0;
        }
  >
    <div
      className=
          ms-CardItem
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: auto;
            width: auto;
          }
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Card Item renders correctly when having the disableChildPadding prop set to true 1`] = `
<div
  className=
      ms-Card
      {
        border-color: lightgray;
        border-style: solid;
        border-width: 1px;
        box-shadow: 1px 2px lightgray;
        height: 350px;
        padding-bottom: 12px;
        padding-left: 12px;
        padding-right: 12px;
        padding-top: 12px;
        width: 250px;
      }
>
  <div
    className=
        ms-Stack
        ms-Card-stack
        {
          box-sizing: border-box;
          display: flex;
          flex-direction: column;
          flex-wrap: nowrap;
          height: 100%;
          justify-content: space-between;
          width: auto;
        }
        & > * {
          height: auto;
          text-overflow: ellipsis;
        }
        & > *:not(:first-child) {
          margin-top: 12px;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 0;
        }
  >
    <div
      className=
          ms-CardItem
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            height: auto;
            margin-left: -12px;
            margin-right: -13px;
            width: auto;
          }
    >
      <div />
    </div>
  </div>
</div>
`;
